--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 *.blg
 Dokumentation/Dokumentation.pdf
 Dokumentation/Dokumentation.lot
+Dokumentation/Anhangsdokument.pdf
+Dokumentation/Anhangsdokument.pdf
